call_chain/tests/snapshots/base__call_chain_new_instance_field.snap
---
source: call_chain/tests/base.rs
expression: out
---
[
    Class {
        name: "String",
        range: AstRange {
            start: AstPoint {
                line: 4,
                col: 8,
            },
            end: AstPoint {
                line: 4,
                col: 23,
            },
        },
    },
    FieldAccess {
        name: "a",
        range: AstRange {
            start: AstPoint {
                line: 4,
                col: 21,
            },
            end: AstPoint {
                line: 4,
                col: 22,
            },
        },
    },
]
