call_chain/tests/snapshots/base__call_chain_semicolon_method.snap
---
source: call_chain/tests/base.rs
expression: out
snapshot_kind: text
---
[
    ClassOrVariable {
        name: "local",
        range: AstRange {
            start: AstPoint {
                line: 5,
                col: 16,
            },
            end: AstPoint {
                line: 5,
                col: 21,
            },
        },
    },
    FieldAccess {
        name: "a",
        range: AstRange {
            start: AstPoint {
                line: 5,
                col: 22,
            },
            end: AstPoint {
                line: 5,
                col: 23,
            },
        },
    },
    MethodCall {
        name: "c",
        range: AstRange {
            start: AstPoint {
                line: 5,
                col: 24,
            },
            end: AstPoint {
                line: 5,
                col: 25,
            },
        },
    },
]
