call_chain/tests/snapshots/base__call_chain_string.snap
---
source: call_chain/tests/base.rs
expression: out
snapshot_kind: text
---
Some(
    [
        Class {
            name: "String",
            range: AstRange {
                start: AstPoint {
                    line: 5,
                    col: 15,
                },
                end: AstPoint {
                    line: 5,
                    col: 17,
                },
            },
        },
    ],
)
