call_chain/tests/snapshots/base__call_chain_variable.snap
---
source: call_chain/tests/base.rs
expression: out
snapshot_kind: text
---
[
    ClassOrVariable {
        name: "a",
        range: AstRange {
            start: AstPoint {
                line: 4,
                col: 8,
            },
            end: AstPoint {
                line: 4,
                col: 9,
            },
        },
    },
]
