call_chain/tests/snapshots/base__call_chain_varible_class.snap
---
source: call_chain/tests/base.rs
expression: out
snapshot_kind: text
---
[
    ClassOrVariable {
        name: "String",
        range: AstRange {
            start: AstPoint {
                line: 5,
                col: 20,
            },
            end: AstPoint {
                line: 5,
                col: 26,
            },
        },
    },
]
